style.css
*{
  font-family: "Inter", sans-serif;
  box-sizing: border-box;
}

html {
  font-size: 86%; /* Reduces font sizes proportionally */
}

body {
  overflow-x: hidden;
}

.custom-navbar{
  background-color: transparent !important;
  /*box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);*/
}

.navbar-brand {
  font-weight: bold;
  font-size: 1.5rem;
  font-family: "Poppins", serif !important;
}

.navbar-brand span {
  color: green;
}

.nav-item{
  margin-right: 20px;
  font-size: 1.2rem;
}

.nav-item{
  margin-right: 20px;
  font-size: 1.2rem;
}

.nav-item a{
  font-family: "Poppins", serif !important;
}

.blog-icon{
  margin-right: 50px;
}

.navbar-button{
  margin-right: -30px !important;
}

.btn {
  background-color: #87CA9C !important;
  font-weight: 600 !important;
}

.fs-7 {
  font-size: 1.2rem;
}

.btn:hover {
  background-color: #5FAD85 !important;
}

body .nav-link:hover, 
body .nav-link.active {
  color: #5FAD85 !important;
}

body .nav-link {
 font-weight: 600;
}

/*slider*/

#hero-slider{
  background-image: url('bgimage.png');
  background-size: cover;
  background-position: center center;
}

/*.slide1{
  background-image: url('main1.png');
  background-size: cover;
  background-position: center;
}

.slide2{
  background-image: url('main2.png');
  background-size: cover;
  background-position: center;
}*/

.slider-image img{
  width: 105%;
  height: 110%;
  box-shadow: 0px 4px 10px rgba(135, 202, 156, 0.5);
}

.slider-image2 img{
  height: 120%;
}

.slider-title{
  font-size: 4.1rem;
  font-weight: 600;
  margin-top: 80px;
  margin-bottom: 30px;
  
}

.slider-text{
  font-size: 1.4rem;
  font-weight: 500;
  margin-bottom: 30px;
  font-family: "Poppins", serif;
}

/*slider Button*/
.owl-prev, .owl-next{
  position: absolute;
  top: 50%;
  width: 50px !important;
  height: 50px !important;
  font-size: 35px !important;
  place-items: center;
  border-radius: 50% !important;
  background-color: #87CA9C;
  display: grid;
  margin-top: -30px !important;
}

.slider-content a{
  font-size: 1.4rem !important;
}

.owl-prev {
  left:0;
}

.owl-next {
  right:0;
}

/*About Us*/
.aboutus img{
  width: 95%;
  height: 100%;
}

.aboutus .about-content{
  position: relative;
}

.aboutus-title{
  font-weight: 600;
  color: black;
  text-align: center;
}

/*MAIN TILE FONT SIZE IN EVERY SECTION*/
.aboutus-title h2, .services-title h2, .feedback-title h2{
  /*font-family: "Lora", serif;*/
  font-size: 2.6rem;
  font-weight: 600;
}

.content p{
  text-align: justify;
  font-size: 1.13rem;
  padding-top: 10px;
  font-family: "Poppins", serif;
}

.pt-100{
  padding-top: 100px;
}

.number-section{
  background-color: #87CA9C;
  z-index: 2;
  position: absolute;
  padding: 15px 26px;
}

.number {
  margin-left: 20px;
}

.number-section h3{
  font-size: 1.8rem;
  font-weight: 600;
}

.number-section h1{
  font-size: 2.4rem;
  font-weight: 600;
  font-family: "Roboto Slab", serif !important;
}

.mt-n130{
  margin-top: 6px;
}

/*Services*/
.service-icon img{
  width: 100%;
  height: auto;
  border-radius: 10px !important;
}

.service-box{
  background-color: #87CA9C;
  padding: 30px;
  border-radius: 10px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
}

/*SERVICE AND FEEDBACK TITLE FONT SIZE*/
.services-title h4, .feedback-title h4{
  font-size: 1.6rem;
  margin: 10px 0px 30px 0px;
}

.service-title h3{
  margin-top: 20px !important;
  
}

.service-content p{
  font-family: "Poppins", serif;
  font-size: 1.1rem;
}

.services{
  background-color: whitesmoke;
  padding-bottom: 50px;
}

/*feedback*/

.pt-50{
  padding-top: 50px;
}

.feedback-main{
  /*box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.15);*/
}

.feedback-box{
  background-color: whitesmoke;
  padding: 30px;
  border-radius: 20px;
  max-width: 1000px;
  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); 
}

.feedback-image img{
  width: 80px;
  height: 80px;
  border-radius: 50%;
  text-align: center;
}

.feedback-image{
  text-align: center;
}

/*footer*/
.footer{
  background-color: #87CA9C;
  padding-top: 20px;
  color: white;
  text-align: center;
  margin-top: 50px; 
  padding-bottom: 10px;
}

.footer .footer-brand{
  color: white;
  margin-bottom: 30px;
  display: inline-block;
}

.footer-top{
  margin-bottom: 40px;
}

.bottom-footer{
  border-top: 1px solid white;
  padding-top: 20px; 
}

.footer .social-links a{
  color: #87CA9C;
  font-size: 24px;
  margin-left: 5px;
  background-color: whitesmoke;
  border-radius: 50%;
  padding: 10px;
  display: inline-flex;
  text-decoration: none;
  align-items: center;
  justify-content: center;
}

/*service page*/
.container-fluid {
  padding: 0;
  margin: 0;
  position: relative;
  width: 100vw;
  height: 320px;
  background-color: #87CA9C;
  z-index: 1;
}

.pt-7{
  padding-top: 120px;
}

.navbar_service{
  background-color: whitesmoke !important;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  z-index: 1000;
}

.service-page img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.small-box-container{
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: -80px;
  margin-bottom: 50px;
}

.small-box{
  background-color: whitesmoke;
  padding: 30px;
  border-radius: 10px;
  box-shadow: 10 10 10px rgba(0, 0, 0, 0.452);
  width: 85%;
  text-align: center;
  z-index: 2;
}

.service-page h1, .blog-page h1{
  font-size: 2.8rem;
  font-weight: 600;
  /*font-family: Arial, sans-serif;*/
  font-family: "Roboto Slab", serif;
}

.service-page p, .blog-page p{
  font-size: 1.4rem;
  text-align: center;
  font-family: "Poppins", serif;
}

.number-circle {
  width: 50px;
  height: 50px;
  border-radius: 50%;
  background-color: #87CA9C;
  color: white;
  font-family: "Poppins", serif;
  display: inline-block;
  line-height: 50px;
  text-align: center;
  margin-bottom: 10px;
}

.steps h2{
  font-family: "Roboto Slab", serif;
}

.small-box p, .service-page-content p{
  font-family: "Poppins", serif;
  font-size: 1.1rem;
  padding-bottom: 10px;
}

.service-title h3, .Additional_title{
  font-family: "Roboto Slab", serif;
}

.services{
  background-color: white;
}


/*Blog Page*/
.blog-page{
  padding: 50px;
  height: 220px;
}

.blog-page h1{
  margin-top: 55px;
}

.blog-container{
  background-color: whitesmoke;
}

.blog-main{
  padding-top: 30px;
  width: 100%;
}

.blog-card{
  width: 60%;
  border: 1px solid #ddd;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  border-radius: 10px;
}

.blog-card img{
  height: 350px;
  object-fit: cover;
}

.blog-card .card-img-top {
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
}

.blog-card .card-body {
  padding: 20px 30px;
}

.blog-card .btn-primary {
  border: none;
  border-radius: 5px;
  padding: 10px 20px;
  font-size: 1.15rem;
  transition: all 0.3s ease;
}

.blog-addition img{
  height: 100%;
  object-fit: cover;
}

.scroll-box{
  height: 540px;
  overflow-y: scroll;
}

/* Style for Webkit browsers (Chrome, Edge, Safari) */
.scroll-box::-webkit-scrollbar {
  width: 8px; /* Width of the scrollbar */
}

.scroll-box::-webkit-scrollbar-thumb {
  background-color: #88888870; /* Scrollbar color */
  border-radius: 4px; /* Rounded edges */
}

.scroll-box::-webkit-scrollbar-thumb:hover {
  background-color: #87CA9C; /* Color on hover */
}

.scroll-box::-webkit-scrollbar-track {
  background-color: #f1f1f1; /* Scrollbar track color */
  border-radius: 4px;
}

.card-body h2, h5{
  font-family: "Roboto Slab", serif;
}

.card-body p, p{
  font-family: "Poppins", serif;
}

.custom-left-shift{
  margin-left: -80px;
}

.Additional_blog{
  background-color: white;
  height: 673px;
  border: 1px solid #ddd;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

#blog{
  background-color: whitesmoke;
}

/*contact us*/

.form-control:focus{
  border-color: #87CA9C;
  box-shadow: none;
}

/*Navbar changing*/

.scrolled{
  background-color: whitesmoke !important;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  z-index: 1000;
}

/*Custom Responsive*/

/* Extra Small (xs): Applies to all screen sizes */
@media (max-width: 575.98px) {
  /* Styles for extra small screens */
  .slider-image img {
    height: auto;
    margin: 2px;
  }

  .slider-image{
    padding-top: 80px;
    padding-inline: 20px;
  }

  .slider-title{
    font-size: 2.65rem;
    margin-top: 30px;
  }

  .slider-text{
    font-size: 1.1rem;
  }

  .slider-image2 img{
    height: 100%;
  }

  .slider-title2{
    padding-top: 25px;
  }

}

/* Small (sm): ≥ 576px */
@media (min-width: 576px) and (max-width: 767.98px) {
  /* Styles for small screens */
  .slider-image{
    padding-top: 120px;
    padding-inline: 20px;
  }

  .slider-title{
    font-size: 2.6rem;
    padding-top: 10px;
  }
}

@media (min-width: 768px) and (max-width: 991.98px) {
  .slider-image img {
    height: auto;
  }

  .slider-image{
    padding-top: 120px;
    padding-inline: 20px;
  }

  .slider-title{
    font-size: 3rem;
    padding-top: 10px;
  }

  
}

/* Large (lg): ≥ 992px */
@media (min-width: 992px) and (max-width: 1199.98px) {
  
  /* Styles for large screens */
}

/* Extra Large (xl): ≥ 1200px */
@media (min-width: 1200px) and (max-width: 1399.98px) {
  /* Styles for extra-large screens */
}

/* Extra Extra Large (xxl): ≥ 1400px */
@media (min-width: 1400px) {
  /* Styles for extra-extra-large screens */
}

